# RiSpy

./: README.md  environment.yaml  pyproject.toml
src/fingerprint_cli/: cli.py  cli_utils.py  fingerprint_pipeline.py  io.py  qc.py
src/fingerprint_cli/data/: AVO.vcf  AVO_Barcodes.tsv  BERENJ.vcf  BERENJ_Barcodes.tsv  BHADOIA.vcf  BHADOIA_Barcodes.tsv  CARREON.vcf  CARREON_Barcodes.tsv  CHAINFILE.chain  COLOMBIA.vcf  COLOMBIA_Barcodes.tsv  Centromere.tsv  JABOR.vcf  JABOR_Barcodes.tsv  Kitaake_Illumina_Barcodes.tsv  Kitaake_ONT_Barcodes.tsv  Kitaake_Shared_Barcodes.tsv  MUTTU.vcf  MUTTU_Barcodes.tsv  Nipponbare.vcf  Nipponbare_Barcodes.tsv  PANKHARI.vcf  PANKHARI_Barcodes.tsv  POENOET.vcf  POENOET_Barcodes.tsv  Sanhuangzhan.vcf  Sanhuangzhan_Barcodes.tsv  chromosome_mapping.txt
src/fingerprint_cli/snakefiles/: fingerprint_detection.smk  illumina_qc_mapping_variant_calling.smk  make_chain_file.smk  mapq.smk  ont_qc_mapping_variant_calling.smk
src/fingerprint_cli/templates/: Illumina_full_pipeline_config_template.yaml  ONT_full_pipeline_config_template.yaml  generate_chain_file_config_template.yaml  only_detection_config_template.yaml
src/fingerprint_cli/validators/: chain.py  common.py  detection.py  illumina.py  ont.py
